--- a/todo
+++ b/todo
@@ -1,2 +1,5 @@
-criar componente de msg
+
 criar modal de confirmar delete
+validar email antes de registrar
+validar telefone antes de registrar
+foto perfil
